Fix z-index to show splash banner immediately

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ body {
     height: 100%;
     display: flex;
     pointer-events: none;
-    z-index: 2001;
+    z-index: 1999;
 }
 
 .blind-strip {
